[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/bgs/TTCBG.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Signika-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://navigation/locked/locked.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 55
font_data = ExtResource( 2 )

[node name="Locked" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.286275, 0.286275, 0.286275, 0.309804 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.996078, 0.996078, 0.996078, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 96.0
margin_top = 96.0
margin_right = -80.0
margin_bottom = -117.0
texture = ExtResource( 1 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 85.0
margin_right = -53.0
margin_bottom = -75.0
alignment = 1

[node name="Label" type="Label" parent="TextureRect/VBoxContainer"]
margin_top = 276.0
margin_right = 787.0
margin_bottom = 479.0
custom_fonts/font = SubResource( 1 )
text = "Pre vstup do aktivity zadajte heslo"
valign = 1
autowrap = true

[node name="HSeparator" type="HSeparator" parent="TextureRect/VBoxContainer"]
margin_top = 483.0
margin_right = 787.0
margin_bottom = 583.0
mouse_filter = 2
custom_constants/separation = 100

[node name="LineEdit" type="LineEdit" parent="TextureRect/VBoxContainer"]
margin_top = 587.0
margin_right = 787.0
margin_bottom = 672.0
custom_fonts/font = SubResource( 2 )

[node name="Error" type="Label" parent="TextureRect/VBoxContainer"]
visible = false
margin_top = 649.0
margin_right = 787.0
margin_bottom = 699.0
custom_colors/font_color = Color( 0.631373, 0.160784, 0.160784, 1 )
custom_fonts/font = SubResource( 4 )
text = "Nesprávne heslo"
align = 1
valign = 1
autowrap = true

[node name="Button" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 676.0
margin_right = 787.0
margin_bottom = 751.0
custom_fonts/font = SubResource( 3 )
text = "Odoslať"

[node name="HSeparator2" type="HSeparator" parent="TextureRect/VBoxContainer"]
margin_top = 755.0
margin_right = 787.0
margin_bottom = 855.0
mouse_filter = 2
custom_constants/separation = 100

[node name="Label3" type="Label" parent="TextureRect/VBoxContainer"]
margin_top = 859.0
margin_right = 787.0
margin_bottom = 959.0
custom_fonts/font = SubResource( 1 )
text = "Nápoveda:"
valign = 1
autowrap = true

[node name="HSeparator3" type="HSeparator" parent="TextureRect/VBoxContainer"]
margin_top = 963.0
margin_right = 787.0
margin_bottom = 1063.0
mouse_filter = 2
custom_constants/separation = 100

[node name="Label2" type="Label" parent="TextureRect/VBoxContainer"]
margin_top = 1067.0
margin_right = 787.0
margin_bottom = 1270.0
custom_fonts/font = SubResource( 1 )
text = "fasd fasd fas df asd fasd f asdfasdf"
valign = 1
autowrap = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="TextureRect/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
